# standards

./: 0-AI-MANIFEST.a2ml  ECOSYSTEM.scm  META.scm  README.adoc  ROADMAP.adoc  SATELLITES.scm  SCM-REPO-TEMPLATE.adoc  SECURITY.md  STATE.scm  TOPOLOGY.md
.claude/: CLAUDE.md
.github/: dependabot.yml
0-ai-gatekeeper-protocol/repo-guardian-fs/: Cargo.toml  README.md
0-ai-gatekeeper-protocol/repo-guardian-fs/src/: filesystem.rs  main.rs  manifest.rs  session_manager.rs
k9-svc/k9-sign/: Cargo.toml  MIGRATION.md  README.md  install.sh
k9-svc/k9-sign/src/: main.rs  tests.rs
k9-svc/tools/src/k9-init/: Cargo.toml
k9-svc/tools/src/k9-init/src/: main.rs
k9-svc/tools/src/k9-sign/: Cargo.toml
k9-svc/tools/src/k9-sign/src/: main.rs
k9-svc/tools/src/k9-validate/: Cargo.toml
k9-svc/tools/src/k9-validate/src/: main.rs
rhodium-standard-repositories/examples/ai-ml-project/: ARCHITECTURE.md  CITATION.cff  Cargo.toml  MODEL_CARD.md  README.md  requirements.txt
rhodium-standard-repositories/examples/ai-ml-project/.rhodium/: config.toml
rhodium-standard-repositories/examples/ai-ml-project/python/: train.py
rhodium-standard-repositories/examples/ai-ml-project/src/: inference.rs  lib.rs  model.rs  preprocessing.rs
rhodium-standard-repositories/examples/enterprise-service/: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs
rhodium-standard-repositories/examples/enterprise-service/.github/: PULL_REQUEST_TEMPLATE.md
rhodium-standard-repositories/examples/enterprise-service/.github/workflows/: ci.yml  security.yml
rhodium-standard-repositories/examples/enterprise-service/.rhodium/: config.toml
rhodium-standard-repositories/examples/enterprise-service/benches/: api_benchmarks.rs
rhodium-standard-repositories/examples/enterprise-service/docs/adr/: 001-use-axum-web-framework.md  002-in-memory-state-management.md  003-security-roadmap.md  README.md
rhodium-standard-repositories/examples/enterprise-service/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs
rhodium-standard-repositories/examples/minimal-rust-project/: Cargo.toml  LICENSE  README.md
rhodium-standard-repositories/examples/minimal-rust-project/.rhodium/: config.toml
rhodium-standard-repositories/examples/minimal-rust-project/src/: lib.rs
rhodium-standard-repositories/examples/rhodium-minimal/: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  GOVERNANCE.md  LICENSE.txt  MAINTAINERS.md  README.md  SECURITY.md  flake.nix  justfile
rhodium-standard-repositories/examples/rhodium-minimal/.well-known/: ai.txt  humans.txt  security.txt
rhodium-standard-repositories/examples/rhodium-minimal/docs/: OVERVIEW.md
rhodium-standard-repositories/examples/rhodium-minimal/src/: main.rs
rhodium-standard-repositories/examples/standard-library/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
rhodium-standard-repositories/examples/standard-library/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rhodium-standard-repositories/examples/standard-library/.rhodium/: config.toml
rhodium-standard-repositories/examples/standard-library/examples/: basic_usage.rs
rhodium-standard-repositories/examples/standard-library/src/: lib.rs
rhodium-standard-repositories/satellites/cccp/satellites/sanctify-php/: README.adoc  sanctify-php.cabal
rhodium-standard-repositories/satellites/cccp/satellites/sanctify-php/app/: Main.hs
rhodium-standard-repositories/satellites/cccp/satellites/sanctify-php/guix/: wordpress-container.scm
rhodium-standard-repositories/satellites/palimpsest-license/TOOLS/validation/haskell/: LICENSE  README.md  TESTING.md  cabal.project  palimpsest-validator.cabal  stack.yaml
rhodium-standard-repositories/satellites/palimpsest-license/ocaml/: README.md  dune-project
rhodium-standard-repositories/satellites/palimpsest-license/ocaml/browser/: dune  palimpsest_browser.ml
rhodium-standard-repositories/satellites/palimpsest-license/ocaml/lib/: compliance.ml  dune  palimpsest.ml  parser.ml  types.ml
rhodium-standard-repositories/satellites/palimpsest-license/ocaml/test/: dune  test_palimpsest.ml
rhodium-standard-repositories/satellites/rsr-certifier/: .editorconfig  CHANGELOG.adoc  CODE_OF_CONDUCT.md  Cargo.toml  FUNDING.yml  GOVERNANCE.md  Justfile  LICENSE-APACHE  LICENSE-MIT  MAINTAINERS.md  README.adoc  ROADMAP.adoc  SECURITY.md
rhodium-standard-repositories/satellites/rsr-certifier/.github/: PULL_REQUEST_TEMPLATE.md  app-manifest.yml  dependabot.yml
rhodium-standard-repositories/satellites/rsr-certifier/.github/workflows/: ci.yml  codeql.yml  guix-nix-policy.yml  release.yml  rsr-antipattern.yml  rust-ci.yml  scorecard.yml  security-policy.yml
rhodium-standard-repositories/satellites/rsr-certifier/container/: Containerfile  compose.yml
rhodium-standard-repositories/satellites/rsr-certifier/container/k8s/: deployment.yaml
rhodium-standard-repositories/satellites/rsr-certifier/docs/: CITATIONS.adoc  DEPLOYMENT.md  PLATFORMS.md  RSR_ALIGNMENT.md
rhodium-standard-repositories/satellites/rsr-certifier/engine/: Cargo.toml
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/: lib.rs  main.rs
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/adapters/: bitbucket.rs  gitea.rs  gitlab.rs  mod.rs
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/compliance/: bronze.rs  gold.rs  mod.rs  rhodium.rs  silver.rs
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/db/: cache.rs  documents.rs  graphs.rs  mod.rs
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/events/: mod.rs  types.rs
rhodium-standard-repositories/satellites/rsr-certifier/engine/src/server/: mod.rs  routes.rs
rhodium-standard-repositories/satellites/rsr-certifier/extensions/vscode/: package.json
rhodium-standard-repositories/satellites/rsr-certifier/lsp/: Cargo.toml
rhodium-standard-repositories/satellites/rsr-certifier/lsp/src/: main.rs
rhodium-standard-repositories/satellites/rsr-certifier/schemas/: rsr-config.schema.json
(+1325 files in other folders)
