[package]
name = "repo-guardian-fs"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "FUSE filesystem wrapper enforcing AI.a2ml manifest acknowledgment before repo access"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/repo-guardian-fs"
readme = "README.md"
keywords = ["fuse", "filesystem", "ai", "gatekeeper", "manifest"]
categories = ["filesystem", "development-tools"]

[dependencies]
fuse3 = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
