[package]
name = "k9-sign"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "AGPL-3.0-or-later"
description = "Ed25519 signing and verification for K9 Hunt-level components"
repository = "https://github.com/hyperpolymath/k9-svc"

[dependencies]
# Ed25519 cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
signature = "2.2"
rand = "0.8"

# Base64 encoding/decoding
base64 = "0.22"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File I/O and path handling
dirs = "5.0"

# SHA-256 for fingerprints
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"  # Optimize for size
