[package]
name = "ai-ml-project"
version = "1.0.0"
edition = "2021"
authors = ["Rhodium Framework Contributors <rhodium@example.com>"]
license = "MIT OR Apache-2.0"
description = "AI/ML project demonstrating Rhodium-level compliance"
repository = "https://github.com/Hyperpolymath/rhodium-standard-repositories"
readme = "README.md"
keywords = ["rhodium", "ai", "ml", "inference"]
categories = ["science", "web-programming::http-server"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.16"
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "inference-server"
path = "src/bin/server.rs"

[lib]
name = "ai_ml_project"
path = "src/lib.rs"
