[package]
name = "enterprise-service"
version = "1.0.0"
edition = "2021"
authors = ["Rhodium Framework Contributors <rhodium@example.com>"]
license = "MIT OR Apache-2.0"
description = "An enterprise-grade service demonstrating Gold-level Rhodium compliance"
repository = "https://github.com/Hyperpolymath/rhodium-standard-repositories"
documentation = "https://docs.rs/enterprise-service"
homepage = "https://github.com/Hyperpolymath/rhodium-standard-repositories"
readme = "README.md"
keywords = ["rhodium", "enterprise", "microservice", "rest-api"]
categories = ["web-programming::http-server", "development-tools"]
rust-version = "1.70"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
config = "0.14"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip"] }
chrono = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
axum-test = "14.0"

[build-dependencies]
built = "0.7"

[[bench]]
name = "api_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
