[package]
name = "minimal-rust-project"
version = "0.1.0"
edition = "2021"
authors = ["Rhodium Framework Contributors"]
license = "MIT OR Apache-2.0"
description = "A minimal Rust library demonstrating Bronze-level Rhodium compliance"
repository = "https://github.com/Hyperpolymath/rhodium-standard-repositories"
readme = "README.md"
keywords = ["rhodium", "example", "minimal"]
categories = ["development-tools"]

[dependencies]

[dev-dependencies]
