# SPDX-License-Identifier: MPL-2.0-or-later
# SPDX-FileCopyrightText: 2025 The Rhodium Standard Contributors

[package]
name = "rhodium-minimal"
version = "0.1.0"
edition = "2021"
authors = ["The Rhodium Standard Contributors"]
license = "MIT AND Palimpsest-0.8"
description = "Minimal Rhodium Standard Repository (RSR) compliant example"
repository = "https://gitlab.com/hyperpolymath/rhodium-standard-repositories"
readme = "README.md"
keywords = ["rhodium", "rsr", "cccp", "offline-first", "type-safety"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# No dependencies - demonstrates offline-first principle
# All functionality is self-contained

[dev-dependencies]
# No dev dependencies in minimal example
# For real projects, consider:
# - proptest (property-based testing)
# - criterion (benchmarking)

[profile.release]
# Optimized release builds
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
