[package]
name = "standard-library"
version = "0.2.1"
edition = "2021"
authors = ["Rhodium Framework Contributors <rhodium@example.com>"]
license = "MIT OR Apache-2.0"
description = "A standard Rust library demonstrating Silver-level Rhodium compliance"
repository = "https://github.com/Hyperpolymath/rhodium-standard-repositories"
documentation = "https://docs.rs/standard-library"
readme = "README.md"
keywords = ["rhodium", "example", "silver", "collections"]
categories = ["data-structures", "development-tools"]
exclude = [".github/", "*.md"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serialization = ["serde"]

[[example]]
name = "basic_usage"
required-features = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
