[package]
name = "k9-init"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Scaffold new K9 contractiles from templates"
homepage = "https://github.com/hyperpolymath/k9-tools"
repository = "https://github.com/hyperpolymath/k9-tools"
keywords = ["k9", "nickel", "infrastructure", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dialoguer = "0.11"
tera = "1.20"
walkdir = "2.4"
chrono = "0.4"

[[bin]]
name = "k9-init"
path = "src/main.rs"
