[package]
name = "k9-sign"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Sign and verify K9 contractiles with Ed25519"
homepage = "https://github.com/hyperpolymath/k9-tools"
repository = "https://github.com/hyperpolymath/k9-tools"
keywords = ["k9", "signing", "ed25519", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
chrono = "0.4"

[[bin]]
name = "k9-sign"
path = "src/main.rs"
