[package]
name = "k9-validate"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
description = "Standalone validator for K9 contractiles"
homepage = "https://github.com/hyperpolymath/k9-tools"
repository = "https://github.com/hyperpolymath/k9-tools"
keywords = ["k9", "nickel", "validation"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"

[[bin]]
name = "k9-validate"
path = "src/main.rs"
