(lang dune 3.0)

(using melange 0.1)

(name palimpsest)

(generate_opam_files true)

(source
 (github palimpsest-license/palimpsest-license))

(authors "Palimpsest Stewardship Council")

(maintainers "Palimpsest Stewardship Council")

(license MIT)

(documentation https://palimpsestlicense.org/docs)

(package
 (name palimpsest)
 (synopsis "Palimpsest License metadata and compliance tools")
 (description "OCaml library for validating, parsing, and generating Palimpsest License metadata. Supports compliance checking, emotional lineage preservation, and quantum-proof traceability. Compiles to native code or JavaScript via Melange.")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (yojson (>= 2.0))
  (ppx_deriving_yojson (>= 3.7))
  (melange (>= 3.0))
  (alcotest :with-test))
 (tags
  (license metadata compliance ai-ethics melange)))
