[package]
name = "rsr-engine"
description = "Universal Rhodium Standard Repository compliance engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rsr"
path = "src/main.rs"

[lib]
name = "rsr_engine"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
gix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true

# Additional dependencies
glob = "0.3"
regex = "1.10"
once_cell = "1.19"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tempfile = "3.9"
