[package]
name = "rsr-lsp"
description = "Language Server Protocol implementation for RSR compliance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rsr-lsp"
path = "src/main.rs"

[dependencies]
rsr-engine = { path = "../engine" }
tokio.workspace = true
tower-lsp.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
