cabal-version:      3.0
name:               palimpsest-validator
version:            0.1.0.0
synopsis:           Validation tools for the Palimpsest License
description:        Functional programming-based validation suite for legal document
                    validation, metadata schema validation, and bilingual consistency
                    checking for the Palimpsest License project.
homepage:           https://github.com/palimpsest-license
license:            MIT
license-file:       LICENSE
author:             Palimpsest Stewardship Council
maintainer:         stewardship@palimpsest.org
category:           Legal, Validation
build-type:         Simple
extra-source-files: README.md

common common-options
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Widentities
                    -Wincomplete-uni-patterns
                    -Wincomplete-record-updates
                    -Wredundant-constraints
                    -Wnoncanonical-monad-instances
                    -fhide-source-paths
                    -Wmissing-export-lists
                    -Wpartial-fields
                    -Wmissing-deriving-strategies
                    -fno-warn-orphans
  if impl(ghc >= 8.8)
    ghc-options:    -Wmissing-deriving-strategies
                    -Werror=missing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:    -Wunused-packages

library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:  Palimpsest.Validator
                    Palimpsest.Validator.License
                    Palimpsest.Validator.Metadata
                    Palimpsest.Validator.Bilingual
                    Palimpsest.Validator.Reference
                    Palimpsest.Validator.Types
                    Palimpsest.Validator.Utils
  build-depends:    base                 >= 4.12 && < 5
                  , aeson                >= 2.0
                  , aeson-pretty         >= 0.8
                  , bytestring           >= 0.10
                  , containers           >= 0.6
                  , text                 >= 1.2
                  , megaparsec           >= 9.0
                  , parser-combinators   >= 1.0
                  , xml-conduit          >= 1.9
                  , filepath             >= 1.4
                  , directory            >= 1.3
                  , mtl                  >= 2.2
                  , transformers         >= 0.5
                  , scientific           >= 0.3
                  , vector               >= 0.12
                  , unordered-containers >= 0.2
                  , regex-tdfa           >= 1.3

executable palimpsest-validate
  import:           common-options
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base >= 4.12 && < 5
                  , palimpsest-validator
                  , optparse-applicative >= 0.16
                  , text                 >= 1.2
                  , filepath             >= 1.4
  ghc-options:      -threaded
                    -rtsopts
                    -with-rtsopts=-N

test-suite palimpsest-validator-test
  import:           common-options
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Palimpsest.Validator.LicenseSpec
                    Palimpsest.Validator.MetadataSpec
                    Palimpsest.Validator.BilingualSpec
                    Palimpsest.Validator.ReferenceSpec
                    Palimpsest.Validator.UtilsSpec
                    Integration.PipelineSpec
  build-depends:    base >= 4.12 && < 5
                  , palimpsest-validator
                  , hspec                >= 2.7
                  , QuickCheck           >= 2.14
                  , text                 >= 1.2
                  , aeson                >= 2.0
                  , unordered-containers >= 0.2
                  , bytestring           >= 0.10
  ghc-options:      -threaded
                    -rtsopts
                    -with-rtsopts=-N
                    -fhpc
                    -hpcdir dist/hpc
